lab1/Test/L1-A-6-0.output
Error Type B at Line 2
Error Type B at Line 5
Error Type B at Line 7
Error Type A at Line 18
Error Type B at Line 24
Error Type B at Line 26
Error Type B at Line 30
Error Type B at Line 33
Error Type B at Line 37
