lab1/Test/L1-A-6-0.cmm
float mgAdnEGq8hL ( ) {
  float R = - fjt1h9Zugc1VO ( ) =  ( fjBrHupTgFjfFd 
    ) * gQZ4O8R7m + IAsxLAPFYfA4amXsCba6 - oam + CuqpTGCmyH 
    || O ;
  float tY , = TloUug , fLt3w2 ;
  struct G4uAB0f1PNeWZdQ RImjob4i1MFrw3VVMUX = sMWkrJH 
    ( myGzT9biZ ) [ aRZY60U ] = W while ;
  if ( HDqd8FMfbgPwGNC ( ! rxC7hvZ78dv4zUYi5z2e / 
    fB5VmOVkEnzzaFrK * pF17yX501Nr * EIvhd7zYTa81Er5Yi2M 
    / Zzx3Lb259F < fEtg == VxmPbvaNmX7DOUFOtXY != mkuAx2i91J2G 
    < d5PiMeRUgRlyL1Wvq1Xe != ErjVinJV != oTSCKicaBs6TAWBhC 
    && s2gZNz || JCts6si_SSSAg || N4LAk3VvQg5mbyZ || FYN0SHb22AK4S 
    , Ks0WAG6wqtvnZwNI ) . N4OnWW46lk = - V / za * M1kTkzqCqKQ2iWiQk 
    / j / wirKz0grelgdHr * ieXwZICMtpIu3v + Q19 + MbPY4Wq4PctKJ 
    + bwJO3pzVYi_ + cKQJ <= yW1JTh9Uiq125hCa5 >= WdCgRx_ 
    >= hqDaariXRsKhZxzb <= FxQ5UTp2y < XjWAk_CJXumBZ >= 
    mfcL8L == D >= SdNcecz91QOHK3DNy >= Q8eFoXTOXNY255JF 
    > hqR != iOsv6cC && Jgti @&& oVgC4A3WYRNvkosSoA ) 
      - J8M = WC1xZ0IEO6KakvS ;
else   GXQMt ;

}
struct LgxnXU {
  float gdx9 [ 1296278475 ] [ 327467177 ] [ ] , YZRxB8aM_m 
    = ru_ ;
  float ZNuNl1obhVusM0Vwh , [ 375337845 ] ;
  int IXWlj0o [ 582269532 ] [ 203117970 ] [ 799221353 
    ] ;
  int qNwfcAu0H4_HJW [ 123307376 ] [ 447803593 ] = 
    , L ;
  struct {
  }fZjM8 ;
> }MbnK [ 96787028 ] [ 365242323 ] [ 1468568840 ] 
  [ 355785636 ] 
;
float GAvzirfsPm2MN ( ) {
}&& 
